[package]
name = "ksmparser"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = {version = "0.39.2", features = ["temporal"] }
encoding_rs = "0.8.34"
encoding_rs_io = "0.1.7"
lazy_static = "1.4.0"
dashmap = "5.5.3"
