[package]
name = "ksmserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ksmparser = { path = "../ksmparser" }
polars = {version = "0.39.2", features = ["lazy"]}
polars-io = { version = "0.39.2", features = ["json"] }
tide = "0.16.0"
async-std = { version = "1.12.0", features = ["attributes"] }
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.201", features = ["derive"] }
serde_urlencoded = "0.7.1"
